# dbh-vibes

./: .gitignore  README.md  pyproject.toml
data/: README.md
docs/: architecture.md  feature-ideas.md  identity-reid.md  research-landscape.md  team-clustering.md
eval/: README.md  sample_labels.csv  sample_labels_v2.csv  validate_reid.py
src/dbh_vibes/: __init__.py  __main__.py  activity.py  autoclip.py  boxscore.py  cli.py  detect_track.py  evaluate.py  game.py  identity.py  labeling.py  osnet.py  pipeline.py  reid_embedder.py  report.py  roster.py  segments.py  shifts.py  spatial.py  surface.py  team_cluster.py  team_siglip.py
tests/: test_autoclip.py  test_boxscore.py  test_evaluate.py  test_game.py  test_handoffs.py  test_identity.py  test_reid_embedder.py  test_report.py  test_roster.py  test_segments.py  test_shifts.py  test_team_cluster.py
