[project]
name = "dbh-vibes"
version = "0.1.0"
description = "Ball hockey video analysis — player detection, tracking, and stats attribution"
requires-python = ">=3.11"
dependencies = [
    "ultralytics>=8.3.0",
    "supervision>=0.25.0",
    "opencv-python>=4.10.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
]

[project.optional-dependencies]
# Phase 2 SigLIP team classification. Heavy (transformers); install with:
#   pip install -e ".[phase2]"
# Clustering is deterministic PCA + KMeans (scikit-learn); no UMAP — see docs/team-clustering.md.
phase2 = [
    "transformers>=4.45.0",
    "scikit-learn>=1.5.0",
]
# Test tooling. The segmentation tests are pure-stdlib and run without the heavy CV deps:
#   pip install -e ".[dev]" && pytest
dev = [
    "pytest>=8.0",
]

[project.scripts]
dbh-vibes = "dbh_vibes.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
